--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ python:
 
 install:
 - pip install -r requirements.txt --use-mirrors
-- pip install nosetests
+- pip install nose
 
 script: nosetests
