--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
   - "3.5"
 
 install:
-- pip install -r requirements.txt --use-mirrors
+- pip install -r requirements.txt
 - pip install nose
 
 script: nosetests
