ci: do diff-lint only for pull-requests
Related: https://github.com/redhat-plumbers-in-action/differential-shellcheck/issues/215

--- a/.github/workflows/python-diff-lint.yml
+++ b/.github/workflows/python-diff-lint.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   python-lint-job:
     runs-on: ubuntu-latest
+    if: github.event_name != 'push'
     steps:
       - name: Repository checkout
         uses: actions/checkout@v3
@@ -17,15 +18,15 @@ jobs:
         name: VCS Diff Lint
         uses: fedora-copr/vcs-diff-lint-action@v1
 
-      - if: ${{ always() }}
-        name: Upload artifact with detected defects in SARIF format
+      - name: Upload artifact with detected defects in SARIF format
         uses: actions/upload-artifact@v3
         with:
           name: VCS Diff Lint SARIF
           path: ${{ steps.VCS_Diff_Lint.outputs.sarif }}
+        if: ${{ always() }}
 
-      - if: ${{ always() }}
-        name: Upload SARIF to GitHub using github/codeql-action/upload-sarif
+      - name: Upload SARIF to GitHub using github/codeql-action/upload-sarif
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: ${{ steps.VCS_Diff_Lint.outputs.sarif }}
+        if: ${{ always() }}
