ci: diff-lint: allow uploading security info
Relates: https://github.com/fedora-copr/vcs-diff-lint-action/pull/17

--- a/.github/workflows/python-diff-lint.yml
+++ b/.github/workflows/python-diff-lint.yml
@@ -9,6 +9,11 @@ on:
 jobs:
   python-lint-job:
     runs-on: ubuntu-latest
+
+    permissions:
+      # required for all workflows
+      security-events: write
+
     steps:
       - name: Repository checkout
         uses: actions/checkout@v3
